# webp-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: publish.yml
examples/: custom_encoder.rs  decode.rs  encode.rs  encode_buffer.rs  lossless.rs  parallel_encode.rs  probe.rs  roundtrip.rs  version.rs
src/: decoder.rs  encoder.rs  error.rs  ffi.rs  info.rs  lib.rs  sys.rs
tests/: config.rs  decode.rs  encode.rs  errors.rs  roundtrip.rs
tests/common/: mod.rs
